# Computational-Geometry-Tests

./: .gitignore  CMakeLists.txt  Dockerfile  License.txt  README.md  Stanford_Bunny_reconstructed5.ply  VW_Casting_GOM_40k_poisson.ply  VW_Casting_GOM_40k_poisson.stl.ply  airplane_ascii_poisson_reconstructed.ply  airplane_ascii_poisson_reconstructed4.ply  airplane_ascii_poisson_reconstructed_10.ply  airplane_ascii_poisson_reconstructed_3.ply  build_all.sh  bunny_10k.ply  bunny_10k_reconstructed4.ply  bunny_10k_reconstructed8.ply  gopro20k_ascii_poisson.ply  gopro20k_poisson.ply  run_tests.sh  run_tests_all.sh
.devcontainer/: devcontainer.json
examples/: VW_Casting_GOM_40k.ply  VW_Casting_GOM_40k.stl  airplane_binary.ply  gopro20k.ply  gopro20k_ascii.ply  gopro20k_reconstructe6.ply  gopro20k_reconstructed10.ply
include/: mesh_loader.h  mesh_visualizer.h  minimum_volume_box_calculator.h  poisson_recon.h  tool_path.h
src/: computational_geometry_template_main.cc  mesh_loader.cc  mesh_visualizer.cc  minimum_volume_box_calculator.cc  poisson_recon.cc  tool_path.cc  tool_path_test_main.cc
test/: CMakeLists.txt  tool_path_test_main.cc  tool_path_tests.cc
